small modif + index

--- a/14-DivaOnWeb.tex
+++ b/14-DivaOnWeb.tex
@@ -103,7 +103,7 @@ Ocean Data View \citep[ODV,][]{SCHLITZER02} is a tool for the analysis and visua
 \begin{figure}[H]
 \centering 
 \includegraphics[width=.95\textwidth]{odvdiva1}
-\caption{Example of VG gridding and \diva gridding with ODV (from \citet{SCHLITZER12}).\label{fig:divaodv}}
+\caption[Example of VG gridding and \diva gridding with ODV.]{Example of VG gridding and \diva gridding with ODV (from \citet{SCHLITZER12}).\label{fig:divaodv}}
 \end{figure}
 
 \diva gridding is a simplified version of \diva implemented inside ODV, where the user can only modify a limited number of parameters.
