--- a/16-DivaProblems.tex
+++ b/16-DivaProblems.tex
@@ -235,7 +235,7 @@ The analysed fields has points of \textit{not-a-number} ($NaN$) values.
 \begin{figure}[htpb]
 \centering
 \includegraphics[width=.45\textwidth]{error_stripes_bound}\includegraphics[width=.45\textwidth]{error_stripes_bound_corr}
-\caption{Examples of \diva outputs with zones of $NaN$ at boundaries. For the right the solution to the problem was applied \label{fig:error_stripes}}
+\caption[Examples of \diva outputs with zones of $NaN$ at boundaries.]{Examples of \diva outputs with zones of $NaN$ at boundaries. For the right the solution to the problem was applied \label{fig:error_stripes}}
 \end{figure}
 
 \subsubsection{\question}
