--- a/7-DivaError.tex
+++ b/7-DivaError.tex
@@ -269,7 +269,7 @@ where $\transp{\quad}$ stands for the transposed vector or matrix and $\mathbf{h
 $\mathbf{x}^a$ but whose components are the weight associated with each integration point. The weight is typically the surface associated with
 the integration point. For an integration over a uniform grid, the weights can without loss of generality be unit (the surface dimension can be retrieved at the end by global multiplication). 
 
-Note that the weights here have nothing to do with the weight on data points for an analysis.
+Note that the weights here have nothing to do with the weight on data points for an analysis\index{Weight}.
 
 Now the analysis is not exact but has an associated random error $\mathbf{\epsilon}^a$ with respect to the true
 field values $\mathbf{x}^t$:
