--- a/8-DivaConstraints.tex
+++ b/8-DivaConstraints.tex
@@ -281,7 +281,7 @@ In the functional to be minimised by \diva, there is a data-analysis misfit term
 \begin{equation}
 \sum_{i=1}^{N_{d}} =  \mu_i \left[ d_i - \varphi(x_i,y_i) \right]^2
 \end{equation}
-where $\mu_i$ is the data weight on data $d_i$ found in location $x_i,y_i$. The solution of the minimisation is the analysed field $\varphi(x,y)$.
+where $\mu_i$ is the data weight\index{Weight} on data $d_i$ found in location $x_i,y_i$. The solution of the minimisation is the analysed field $\varphi(x,y)$.
 
 
 If we define one group, each data point is in one and only one class $C_j$ of this group. Hence
