--- a/9-DivaGeneral.tex
+++ b/9-DivaGeneral.tex
@@ -170,7 +170,7 @@ The data file (\file{data.dat}) contains at least three columns:
 \item the data value.
 \end{enumerate}
 \begin{itemize}
-\item The fourth column  [optional] indicates the weight of the each data point. If this column is empty, the fourth column is assumed to take the value $1$. 
+\item The fourth column [optional] indicates the weight\index{Weight} of the each data point. If this column is empty, the fourth column is assumed to take the value $1$. 
 \item If there are more than four columns, columns 5 and higher are not used by the software, except if you want to use the detrending tool (Section~\ref{sec:detrending})\index{Detrending}. 
 \end{itemize}
 
