--- a/17-DivaScriptCode.tex
+++ b/17-DivaScriptCode.tex
@@ -1,8 +1,8 @@
-\chapter[\diva code]{\diva code}
+\chapter[Diva code]{Diva code}
 %-----------------------------
 \hypertarget{DIVACODE}{}
 
-The engine of \diva is a set of Fortran subroutines driven by local input and output files (\file{fort.*}.
+The engine of \diva is a set of Fortran subroutines driven by local input and output files (\file{fort.*}).
 This chapter is dedicated to the description of these programs, in order to allow the advanced user to adapt the code according to his needs.
 
 \minitoc
