changed PATH=$PATH etc

--- a/0-DivaHeader2012.tex
+++ b/0-DivaHeader2012.tex
@@ -40,7 +40,7 @@
 \usepackage{makeidx}
 \usepackage{booktabs}
 \usepackage[explicit]{titlesec}
-\usepackage{texgraph}
+%\usepackage{texgraph}
 \usepackage{epic,eepic}
 \usepackage{rotating}
 \usepackage{etex}
