--- a/15-Godiva.tex
+++ b/15-Godiva.tex
@@ -494,7 +494,7 @@ The use of reference fields option is activated when the corresponding flag valu
 \end{verbatim}
 \end{footnotesize}
 \caption{\file{varlist}}
-\label{varlistexp}
+\label{varlistexp2}
 \end{exfile}
 \end{center}
 
