bad links corrected

--- a/12-DivaPostprocessing.tex
+++ b/12-DivaPostprocessing.tex
@@ -260,7 +260,7 @@ but requires the NetCDF library to be compiled with your own system configuratio
 
 \subsection{Installation under Linux}
 
-Recent Linux distribution already permits the installation of Ncview through their package manager. Should it not be the case, the last version of Ncview is available here: \url{???}
+Recent Linux distribution already permits the installation of Ncview through their package manager. Should it not be the case, the last version of Ncview is available here: \url{ftp://cirrus.ucsd.edu/pub/ncview/ncview-2.1.2.tar.gz}
 
 \subsection{Installation under Windows-Cygwin}
 
