--- a/13-DivaExamples.tex
+++ b/13-DivaExamples.tex
@@ -7,7 +7,7 @@ A few examples with real data are described in this chapter. They can act as mod
 
 \newpage
 
-\section{Complete example}
+\section{Complete example\label{sec:medseaex}}
 %---------------------------------------------------
 
 We present here a complete 2-D case treated in command-line. This example is taken from \citet{TROUPIN12}.
