--- a/15-Godiva.tex
+++ b/15-Godiva.tex
@@ -474,7 +474,7 @@ To perform \diva 4D analyses with advection constraint and/or using reference fi
 
 \subsubsection{Using advection constraint and/or reference field }
 
-The advection constraint and/or reference fields usage actions are activated by the corresponding flag values in \file{constandrefe} file (see example~\ref{expconsreff}).
+The advection constraint and/or reference fields usage actions are activated by the corresponding flag values in \file{constandrefe} file.% (see example~\ref{expconsreff}).
 The advection constraint option is activated when the corresponding flag value is equal to $1$. 
 The use of reference fields option is activated when the corresponding flag value is equal to $1$, in this case a year period  and month period codes must be provided in the corresponding lines.
 
