--- a/1-DivaTitlePage.tex
+++ b/1-DivaTitlePage.tex
@@ -29,7 +29,7 @@
 \includegraphics[height=7cm]{casta}
 \end{figure}
 
-\normalsize{(last modified \today)}
+\normalsize{(last modified: March 2013)}
 
 \vfill
 
