added how to cite text

--- a/tags/DivaUserGuide_March2013/3-DivaConditionUse.tex
+++ b/tags/DivaUserGuide_March2013/3-DivaConditionUse.tex
@@ -11,7 +11,7 @@
 
  
 \vspace{.25cm}
-\diva is a software developed at the GeoHydrodynamic and Environmental Research (GHER, \url{http://modb.oce.ulg.ac.be/}) group at the University of Liège (\url{http://www.ulg.ac.be})) and that will be further developed for SeaDataNet scientific data products in \textsf{JRA4} activities. \diva is copyright $\copyright$  2006-\the\year by the GHER group and is distributed under the terms of the GNU General Public License (GPL): \url{http://www.gnu.org/copyleft/gpl.html} \index{SeaDataNet}
+\diva is a software developed at the GeoHydrodynamic and Environmental Research (GHER, \url{http://modb.oce.ulg.ac.be/}) group at the University of Liège (\url{http://www.ulg.ac.be})) and that will be further developed for SeaDataNet scientific data products in \textsf{JRA4} activities. \diva is copyright $\copyright$  2006-\the\year\xspace by the GHER group and is distributed under the terms of the GNU General Public License (GPL): \url{http://www.gnu.org/copyleft/gpl.html} \index{SeaDataNet}
 
 In short, this means that everyone is free to use \diva and to redistribute it on a free basis. \diva is not in the public domain; it is copyrighted and there are restrictions on its distribution (see the license \url{http://www.gnu.org/copyleft/gpl.html} and its associated FAQ \url{http://www.gnu.org/copyleft/gpl-faq.html}). For example, you cannot integrate this version of \diva (in full or in parts) in any \textit{closed-source} software you plan to distribute (commercially or not).
 
@@ -58,6 +58,71 @@ To make easier the reading of the document, different font colors are used for d
 \item \directory{the directories}.
 \end{itemize}
 Various example files are provided for different situations. 
+
+
+\vspace{.25cm}
+\end{minipage}
+
+\end{center}
+
+\vspace*{\fill}
+
+\newpage
+
+\vspace*{\fill}
+
+\begin{center}
+\begin{minipage}[c]{.85\textwidth}
+%\parskip 0.25cm
+\Large{How to cite?}
+%\addcontentsline{toc}{chapter}{Conditions of use}
+\vspace{1cm}
+\normalsize
+
+
+\begin{itemize}
+\item This document:
+
+
+Troupin, C.; Ouberdous, M.; Sirjacobs, D.; Alvera-Azcárate, A.; Barth, A.; Toussaint, M.-E. \& Beckers, J.-M. (2013) \diva User Guide.\\
+\url{http://modb.oce.ulg.ac.be/mediawiki/upload/DIVA/notes/DivaUserGuide_March2013.pdf}
+
+
+\item and the related peer-reviewed publication:
+
+
+Troupin, C.; Sirjacobs, D.; Rixen, M.; Brasseur, P., Brankart, J.-M.; Barth,
+A.; Alvera-Azc\'{a}rate, A.; Capet, A.; Ouberdous, M.; Lenartz, F.;
+Toussaint, M.-E \& Beckers, J.-M. (2012).
+Generation of analysis and consistent error fields using the Data
+Interpolating Variational Analysis (Diva).
+\emph{Ocean Modelling}, \textbf{52-53}: 90--101.\\
+\doi{10.1016/j.ocemod.2012.05.002}\\
+\url{http://www.sciencedirect.com/science/article/pii/S1463500312000790}
+
+\item[]
+
+{\scriptsize
+\BibTeX code:
+\begin{verbatim}
+@ARTICLE{TROUPIN2012bOM,
+  author = {C. Troupin and D. Sirjacobs and M. Rixen and 
+            P. Brasseur and J.-M. Brankart and A. Barth and 
+            A. Alvera-Azc\'{a}rate and A. Capet and M. Ouberdous and 
+            F. Lenartz and M.-E. Toussaint and J.-M. Beckers},
+  title = {{Generation of analysis and consistent error fields 
+            using the Data 	Interpolating Variational Analysis (Diva)}},
+  journal = om,
+  year = {2012},
+  volume = {52-53},
+  pages = {90-101},
+  doi = {10.1016/j.ocemod.2012.05.002},
+  url = {http://www.sciencedirect.com/science/article/pii/S1463500312000790}
+}
+\end{verbatim}
+}
+
+\end{itemize}
 
 
 \vspace{.25cm}
