added reference to parallel skyline solver

--- a/2-DivaAcknowledgement.tex
+++ b/2-DivaAcknowledgement.tex
@@ -29,6 +29,8 @@ the National Fund for Scientific Research (FRS-FNRS, Belgium) for funding the po
 \newline
 the Fund for Research Training in Industry and Agriculture (FRIA) for funding Damien and Charles PhD grants.
 \newline
+Prof. Nielsen who developed the parallel skyline solver which we adapted for use with DIVA. \cite{fcef9d7c510749b0b422021ae57bd58c}
+\newline
 \newline
 \diva was first developed during E.U.~MODB and SeaDataNet projects; the research leading to the last developments of \diva has received funding from the European Union Seventh Framework Programme (FP7/2007-2013) under grant agreement No. 283607, SeaDataNet 2, and from project EMODNET (MARE/2008/03 - Lot 3 Chemistry - SI2.531432) from the Directorate-General for Maritime Affairs and Fisheries. 
 \vspace{2cm}
