--- a/20-DivaPublications.bib
+++ b/20-DivaPublications.bib
@@ -869,3 +869,11 @@
   timestamp = {2011.09.29}
 }
 
+@book{fcef9d7c510749b0b422021ae57bd58c,
+title = "Modeling of Thermo-Electro-Mechanical Manufacturing Processes with Applications in Metal Forming and Resistance Welding",
+publisher = "Springer",
+author = "Nielsen, {Chris Valentin} and Wengi Zhang and Luis Alves and Niels Bay and Martins, {Paulo F.}",
+year = "2012",
+series = "Springer Briefs in Applied Sciences and Technology: Manufacturing and Surface Engineering",
+}
+
