slight tipo changes

--- a/10-DivaPreprocessing.tex
+++ b/10-DivaPreprocessing.tex
@@ -51,7 +51,7 @@ Download the complete, global GEBCO One-Minute Grid file (\file{90n90s180w180e.z
 \subsubsection{Select your area}
 %-------------------------------
 
-Select your region of interest (Fig.~\ref{fig:gebco1}), possibly slightly increased to make sure boundaries are well included in the topography. Then select {\tt File->Export Data->Gridded Data}. Chose Ascii longitude-latitude-depth (default). For the longitude range, use {\tt -180:180} for european seas. Note regions you possibly want to mask later by their coordinate ranges.  Use {\tt topo.gebco.asc} as output file name, into a directory where
+Select your region of interest (Fig.~\ref{fig:gebco1}), possibly slightly increased to make sure boundaries are well included in the topography. Then select {\tt File->Export Data->Gridded Data}. Chose Ascii longitude-latitude-depth (default). For the longitude range, use {\tt -180:180} for European seas. Note regions you possibly want to mask later by their coordinate ranges.  Use {\tt topo.gebco.asc} as output file name, into a directory where
 you have your main climatological working place. Push {\tt OK} and be patient. (Fig. \ref{fig:gebco2}). 
 
 \begin{figure}[htpb]
@@ -199,7 +199,7 @@ Look into \file{dvdv2diva.f} in \directory{./src/Fortran/Util/} how to write suc
 \subsection{Deprecated method: conversion of data from Topography Extractor\label{sec:toponavy}}
 %------------------------------------------------------------------
 
-This DBDB-B topography is not available any more, hence the method described below cannot be used. It is kept in this manual for archival purposes.
+This DBDB-B topography is not available any more, hence the method described below cannot be used. It is kept in this manual for compatibility purposes.
 
 \subsubsection{Select your area}
 %-------------------------------
