--- a/4-DivaInstallation2.tex
+++ b/4-DivaInstallation2.tex
@@ -119,7 +119,10 @@ gfortran
 [charles@gher13 ~]$ nc-config --flibs
 -L/usr/lib -lnetcdff -lnetcdf
 \end{lstlisting}
-Check the options of this command by typing \command{nc-config}, or visit the web page: \url{http://www.unidata.ucar.edu/software/netcdf/workshops/2011/utilities/Nc-config.html}. If you have installed several versions of the NetCDF libraries, you might find several \command{nc-config} on your system.
+Check the options of this command by typing \command{nc-config}, or visit the web page: \url{http://www.unidata.ucar.edu/software/netcdf/workshops/2011/utilities/Nc-config.html}. If you have installed several versions of the NetCDF libraries, you might find several \command{nc-config} on your system, and each of them may provide you different outputs for the two previous commands.
+
+
+
 
 
 Then run the compilation script: 
