--- a/4-DivaInstallation2.tex
+++ b/4-DivaInstallation2.tex
@@ -112,14 +112,14 @@ nclib=/usr/local/lib/netcdf3ifort/libnetcdf.a
 ...
 \end{verbatim}
 
-If your installation knows the \command{nc-config} command, the compiler and the options for the NetCDF \index{NetCDF} library will be detected automatically during the compilation. If you want to check before compilation, type:
+If your installation knows the \command{nf-config} command, the compiler and the options for the NetCDF \index{NetCDF} library will be detected automatically during the compilation. If you want to check before compilation, type:
 \begin{lstlisting}[style=Bash]
-[charles@gher13 ~]$ nc-config --fc
+[charles@gher13 ~]$ nf-config --fc
 gfortran
-[charles@gher13 ~]$ nc-config --flibs
+[charles@gher13 ~]$ nf-config --flibs
 -L/usr/lib -lnetcdff -lnetcdf
 \end{lstlisting}
-Check the options of this command by typing \command{nc-config}, or visit the web page: \url{http://www.unidata.ucar.edu/software/netcdf/workshops/2011/utilities/Nc-config.html}. If you have installed several versions of the NetCDF libraries, you might find several \command{nc-config} on your system, and each of them may provide you different outputs for the two previous commands.
+Check the options of this command by typing \command{nf-config}, or visit the web page: \url{http://www.unidata.ucar.edu/software/netcdf/workshops/2011/utilities/Nc-config.html}. If you have installed several versions of the NetCDF libraries, you might find several \command{nf-config} on your system, and each of them may provide you different outputs for the two previous commands. In older versions of NetCDF libraries \command{nc-config} was used instead of \command{nf-config}.
 
 
 
@@ -179,6 +179,12 @@ The results you obtain have to be similar to those of Fig.~\ref{fig:diva_test_re
 \includegraphics[width=.7\textwidth]{diva_test_results}
 \caption{Results obtained with \command{divatest}.\label{fig:diva_test_results}}
 \end{figure}
+
+
+\subsection{Another basic test}
+
+\command{divatest0} creates basic input files for a fine mesh and a single data point in the center of the domain and runs the analysis. You should obtain the Bessel function with a maximum value of 0.5.
+
 
 \subsection{Large-memory test}
 %-----------------------------
