ispec described, few corrections

--- a/13-DivaExamples.tex
+++ b/13-DivaExamples.tex
@@ -541,7 +541,7 @@ An illustration of the advection constraint \index{Advection} is also presented:
 \begin{figure}[H]
 \centering
 \parbox{.6\textwidth}{
-\includegraphics[width=.55\textwidth]{advection_velocity}
+\includegraphics[width=.55\textwidth]{diva_UV_coast}
 }\parbox{.4\textwidth}{
 \caption{Velocity field used for the advection constraint in the Mediterranean Sea.\label{fig:medsea_vel}}
 }
