small typo in 9-DivaGeneral

--- a/12-DivaPostprocessing.tex
+++ b/12-DivaPostprocessing.tex
@@ -255,7 +255,7 @@ Along with Python, it is necessary to install:
 \subsection{Usage}
 
 
-\section{General NetCDF visualization tools}
+\section[NetCDF visualization tools]{General NetCDF visualization tools}
 %---------------------------------------------
 
 NetCDF (network Common Data Form) format. It is an machine-independent format to represent scientific data. For more details, consult \url{http://www.unidata.ucar.edu/software/netcdf/}. \index{NetCDF}
