--- a/9-DivaGeneral.tex
+++ b/9-DivaGeneral.tex
@@ -295,12 +295,12 @@ A \textit{poor man's} error estimate (quick and underestimated error field, Sect
 
 
 
-Adding $+100$ to the base \texttt{ispec} activates  the clever poor man's error calculation and launches automatically \command{divacpme) 
+Adding $+100$ to the base \texttt{ispec} activates  the clever poor man's error calculation and launches automatically \command{divacpme}
 
 \example\\
 \texttt{ispec}             = 116 \qquad \begin{minipage}[t]{.7\textwidth}{means you want errors at data locations and at points listed in \file{valatxy.coord} computed with the \textit{clever poor man's} error estimate.}\end{minipage}
 
-Adding $-100$ to a negative \texttt{ispec} activates the almost exact error calculation and launches automatically \command{divaexerr)
+Adding $-100$ to a negative \texttt{ispec} activates the almost exact error calculation and launches automatically \command{divaexerr}
 
 \example\\
 \texttt{ispec}             = -106 \qquad \begin{minipage}[t]{.7\textwidth}{means you want errors at data locations and at points listed in \file{valatxy.coord} computed with the almost exact error estimate.}\end{minipage}
